@@ -478,4 +478,9 @@ Tue Feb 16 09:51:28 CST 2016
 - [+] arch/x86/kernel/dumpstack.c
 - [+] arch/x86/kernel/process.c
 - [M] arch/x86/entry/entry_32.S
-- [M] arch/x86/kernel/traps.h
+- [M] arch/x86/kernel/traps.h			[D] do_trap functions
+
+
+Wed Feb 17 09:19:12 CST 2016
+- [+] arch/x86/kernel/process_32.c		[D] show registers ...
+- [+] arch/x86/kernel/process_64.c
